SERVER-12091 Make changes to userCacheInvalidationIntervalSecs take place immediately